Corrected some issues
